> Gemini 2.5 generated this response due to high traffic on Gemini 3
feat: Introduce Trade Summary, Detail/Summary DTOs, and new endpoints

This commit introduces significant enhancements to the trade management and data presentation layers, including new endpoints, refined data transfer objects, and a core entity rename.

- **Refactor Trade DTOs and Entity:**
  - Rename `TradePositions` entity to `TradeSummary` for better semantic clarity.
  - Replace the generic `TradeResponse` with more specific DTOs:
    - `TradeDetailResponse`: Provides comprehensive data for a single trade, including associated plan details like target price and stop loss.
    - `TradeSummaryResponse`: Offers a concise view for lists, such as open positions.
  - Update `TradePositionDiscoveryService` and its repository to use the new `TradeSummary` entity.

- **New Controllers and Services:**
  - Add `TradeSummaryController` with endpoints for fetching open trades, detailed trade info, and all trade summaries.
  - Add `TradeBookMasterController` to manage `Instrument` and `TradePlan` entities.
  - Implement backing services (`TradeSummaryService`, `InstrumentService`, `TradePlanService`) for the new controllers.

- **Enhance Trade Service and API:**
  - Refactor `TradeService` to use and return the new `TradeDetailResponse` and `TradeSummaryResponse`.
  - Add `getOpenTrades` method to `TradeService` to specifically query for trades with an "OPEN" status.
  - Change `updateTrade` endpoint from `PATCH` to `PUT` and move `tradeId` into the request body.
  - Make `startDate` and `endDate` parameters optional in the `getTrades` endpoint.

- **Configuration and Security:**
  - Add `CorsConfig` to enable cross-origin requests from `localhost:4200`, facilitating frontend integration.
  - Update `SecurityConfig` to apply CORS and protect the new endpoints.
  - Modify `LoginRequest` to use `userName` instead of `email` for authentication consistency.